updated swagger docs for other handlers
